--- a/.github/workflows/schema_check.yml
+++ b/.github/workflows/schema_check.yml
@@ -174,8 +174,9 @@ jobs:
         run: echo 'Workspace directory is ${{ github.workspace }}'
       - name: Check MD files
         id: checking
+        shell: bash
         run: |
-          allFiles = '${{ needs.filter.outputs.allchangedfiles }}'
+          $allFiles = '${{ needs.filter.outputs.allchangedfiles }}'
           for line in $(echo "${allFiles}" | jq '.[]'); do \
               if [ ".${line##*.}" == ".md" ]; \
               then \
