--- a/.github/workflows/schema_check.yml
+++ b/.github/workflows/schema_check.yml
@@ -172,6 +172,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Verify the workspace context
         run: echo 'Workspace directory is ${{ github.workspace }}'
+      - name: Prepare directory
+        mkdir md_results
       - name: Set env json
         run: echo 'ALL_JSON="'"${{ needs.filter.outputs.allchangedfiles }}"'"' >> $GITHUB_ENV
       - name: Check MD files
@@ -181,18 +183,21 @@ jobs:
           echo '${{ needs.filter.outputs.allchangedfiles }}' >allFiles.json
           allFiles='${{ needs.filter.outputs.allchangedfiles }}'
           echo "allFiles = " $allFiles "${allFiles}"
-          for line in $( jq -c '.[]' <<< "${allFiles}" ); do \
+          total=0;
+          for line in $( jq -c '.[]' <<< '${allFiles}' ); do \
             echo $line
             echo ".${line##*.}"
             if [ ".${line##*.}" == '.md"' ]; \
             then \
               echo $line; \
-              var=$(awk -f "${{ github.workspace }}/.github/md_check.awk" "${{ github.workspace }}/$line" >"${{ github.workspace }}/results/$line.log")
+              var=$(awk -f "${{ github.workspace }}/.github/md_check.awk" "${{ github.workspace }}/$line" >"${{ github.workspace }}/md_results/log${total}.log")
               echo "return code was " '$var'
             fi \
           done
           cat allFiles.json
           echo "::set-output name=logging::true"
+          ls -la
+          ls -la results/
   inform-md:
     runs-on: ubuntu-latest
     needs: check-md
