--- a/.github/workflows/schema_check.yml
+++ b/.github/workflows/schema_check.yml
@@ -183,15 +183,18 @@ jobs:
         run: |
           echo '${{ needs.filter.outputs.allchangedfiles }}' >allFiles.json
           allFiles='${{ needs.filter.outputs.allchangedfiles }}'
+          allFiles=${allFiles/'["'/}
+          allFiles=${allFiles/'"]'/}
           echo "allFiles = " $allFiles "${allFiles}"
           total=0
-          for line in $( jq -c '.[]' <<< '${allFiles}' ); do
+          IFS='","' read -ra ALL <<< '${allFiles}'
+          for line in "${ALL[@]}"; do
             echo $line
             echo ".${line##*.}"
-            if [ ".${line##*.}" == '.md"' ];
+            if [ ".${line##*.}" == '.md' ];
             then
-              echo $line;
-              awk -f "${{ github.workspace }}/.github/md_check.awk" "${{ github.workspace }}/$line" >"${{ github.workspace }}/md_results/log${total}.log"
+              echo "Found one: " $line;
+              awk -f "${{ github.workspace }}/.github/md_check.awk" "${{ github.workspace }}/$line" >"${{ github.workspace }}/md_results/log_${total}.log"
               total++
             fi
           done
