--- a/.github/workflows/schema_check.yml
+++ b/.github/workflows/schema_check.yml
@@ -185,9 +185,10 @@ jobs:
           allFiles='${{ needs.filter.outputs.allchangedfiles }}'
           allFiles=${allFiles/'["'/}
           allFiles=${allFiles/'"]'/}
-          echo "allFiles = " $allFiles "${allFiles}"
+          allFiles=${allFiles/'","'/'-----'}
           total=0
-          IFS='","' read -ra ALL <<< '${allFiles}'
+          echo '${allFiles}'
+          IFS='-----' read -ra ALL <<< '${allFiles}'
           for line in "${ALL[@]}"; do
             echo $line
             echo ".${line##*.}"
