--- a/.github/workflows/schema_check.yml
+++ b/.github/workflows/schema_check.yml
@@ -184,11 +184,12 @@ jobs:
           echo '${{ needs.filter.outputs.allchangedfiles }}' >allFiles.json
           allFiles='${{ needs.filter.outputs.allchangedfiles }}'
           echo "${allFiles}"
-          allFiles="${allFiles/","/"-----"}"
+          allFiles="${allFiles//","/"-----"}"
+          allFiles="${allFiles//["/}"
+          allFiles="${allFiles//"]/}"
           echo "${allFiles}"
           total=0
-          echo "${allFiles}"
-          IFS='-----' read -ra ALL <<< "${allFiles}"
+          IFS='"-----"' read -ra ALL <<< "${allFiles}"
           for line in "${ALL[@]}"; do
             echo $line
             echo ".${line##*.}"
