--- a/.github/workflows/schema_check.yml
+++ b/.github/workflows/schema_check.yml
@@ -187,11 +187,11 @@ jobs:
           allFiles="${allFiles//","/"-----"}"
           echo "${allFiles}"
           total=0
-          IFS='"-----"' read -ra ALL <<< "${allFiles}"
+          IFS='"' read -ra ALL <<< "${allFiles}"
           for line in "${ALL[@]}"; do
             echo $line
-            echo '.${line##*.}'
-            if [ '.${line##*.}' == '.md' ];
+            echo ${line##*.}
+            if [ ${line##*.} == '.md' ];
             then
               echo "Found one: " $line;
               awk -f "${{ github.workspace }}/.github/md_check.awk" "${{ github.workspace }}/$line" >"${{ github.workspace }}/md_results/log_${total}.log"
