updating the 4x3_rc2 schema

--- a/.github/workflows/schema_check.yml
+++ b/.github/workflows/schema_check.yml
@@ -67,7 +67,7 @@ jobs:
         id: downloadfile  # Remember to give an ID if you need the output
         name: Download the file
         with:
-          url: "https://bwsyncandshare.kit.edu/s/3morKMDHr6fciP5/download"
+          url: "https://www.iai.kit.edu/downloads/Informatik%20f%c3%bcr%20die%20Energiesystemanalyse/IfcCheckingTool_Lite_V2.2_Build-91.zip"
           target: download
       - name: Logging location
         run: |
